<resources>
    <string name="app_name" translatable="false">Orbit Simulator</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="vertical">Vertical</string>
    <string name="speed">Speed</string>
    <string name="horizontal">Horizontal</string>
    <string name="controls">Controls</string>
    <string name="exit">EXIT</string>
    <string name="element">Element</string>
    <string name="geometry">Geometry</string>
    <string name="settings">Settings</string>
    <string name="element_size">Size</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="configuration">Settings</string>
    <string name="apply_changes">Change Size</string>
    <string name="reset_color">Reset Color</string>
</resources>